# noob

./: .gitignore  .readthedocs.yaml  BLOCKCHAIN_DEPLOYMENT_GUIDE.md  COMPLETE_FEATURE_SET.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTED_EXECUTION.md  DISTRIBUTED_SUMMARY.md  ETHEREUM_P2P_COMPLETE.md  FINAL_SUMMARY.md  P2P_ARCHITECTURE.md  PR_DESCRIPTION.md  README.md  README_DISTRIBUTED.md  RUST_INTEGRATION_COMPLETE.md  RUST_INTEGRATION_STATUS.md  build_rust.sh  noob_config.yaml  pdm.toml  pylock.toml  pyproject.toml
.github/workflows/: bench.yml  docs-preview.yml  docs.yml  lint-js.yaml  lint-rust.yml  lint.yml  publish-core.yaml  publish.yaml  tests-js.yml  tests-nobes.yml  tests-rust.yml  tests.yml
contracts/: TaskCoordinator.sol
docs/: changelog.md  conf.py  contributing.md  design.md  index.md  notes.md  related_projects.md
docs/_ext/: plot.py
docs/_static/css/: base.css  rust.css
docs/api/: asset.md  config.md  const.md  event.md  exceptions.md  index.md  input.md  introspection.md  logging.md  node.md  runner.md  scheduler.md  state.md  store.md  tube.md  types.md  utils.md  yaml.md
docs/api/network/: index.md  loop.md  message.md
docs/api/node/: base.md  gather.md  index.md  map.md  return.md  spec.md  tube.md
docs/api/noob-core/: bridge.md  epoch.md  exceptions.md  index.md  item.md  lib.md  python.md  scheduler.md  sorter.md  tube.md
docs/api/runner/: base.md  index.md  sync.md  zmq.md
docs/api/testing/: assets.md  index.md  nodes.md
docs/assets/: important.html
docs/assets/pipelines/: branch.yaml  gather_dependent.yaml  gather_n.yaml  linear.yaml  merge.yaml  recursive_child.yaml  recursive_parent.yaml
docs/examples/: index.md  yaml.md
docs/usage/: asset.md  assets.md  config.md  epochs.md  events.md  index.md  nodes.md  runners.md  tube.md  tubes.md  zmq.md
examples/: QUICK_START.md  README.md  blockchain_image_processing.py  distributed_demo.py  distributed_ml_training.py  ethereum_p2p_processing.py  generate_test_data.py  http-scrape-concise.yaml  http-scrape-img.yaml  http-scrape.yaml  image-ocr-copy.yaml  image_processing_demo.py  ml_training_demo.py  multiply_by.yaml  requirements.txt  rust_acceleration_demo.py  snn-fully-connected.yaml  webcam-display.yaml  webcam-hue.yaml  webcam-write.yaml
js/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.base.ts  vite.config.dev.docs.ts  vite.config.docs.dev.ts  vite.config.docs.ts  vite.config.package.dev.ts  vite.config.package.ts
js/src/: docs.css  edge.tsx  elk.tsx  flow.tsx  globals.d.ts  handle.tsx  index.css  main.tsx  main_docs.ts  main_package.ts  node.tsx  tube.tsx  types.ts  useLayoutNodes.tsx  xy-theme.css
js/src/css/: base.css  docs.css  edge.css  fonts.css  handle.css  index.css  layout.css  node.css  text.css  vars.css  xy-theme.css
js/src/nodes/: elk.tsx  title.tsx
js/src/pages/: view.tsx
js/tests/: tube.test.ts
js/tests/data/: tubes.ts
rust/: README.md
rust/noob_core/: Cargo.toml  pyproject.toml
rust/noob_core/src/: lib.rs  lib_full.rs.backup  lib_minimal.rs  p2p.rs  p2p_simple.rs
schema/: asset.schema.json  input.schema.json  node.schema.json  tube.schema.json
scripts/: render_schema.py
src/noob/: __init__.py  accelerate.py  asset.py  config.py  const.py  cube.py  event.py  exceptions.py  input.py  logging.py  runner.py  scheduler.py  state.py  store.py  toposort.py  tube.py  types.py  utils.py  yaml.py
src/noob/blockchain/: __init__.py  ethereum.py
src/noob/cala/: buffer.py  components.py  distribution.py  parameters.py  pipe_config.py  runner.py  stores.py
src/noob/cli/: main.py  run.py
src/noob/network/: loop.py  message.py
src/noob/node/: __init__.py  base.py  concat.py  gather.py  map.py  return_.py  spec.py  tube.py
src/noob/runner/: __init__.py  asyncio.py  base.py  distributed.py  multiprocess.py  queued.py  sync.py  task_queue.py  worker_server.py  zmq.py
src/noob/runner/zmq/: __init__.py  command.py  node.py  runner.py
src/noob/testing/: __init__.py  assets.py  nodes.py
src/noob/typing/: mypy.py
templates/nobes/: copier.yml
templates/nobes/nobes-{{package_name}}/: README.md.jinja  pyproject.toml.jinja
tests/: bench.py  conftest.py  test_advanced_runners.py  test_asset.py  test_blockchain_integration.py  test_config.py  test_distributed_complex.py  test_ethereum_p2p.py  test_image_processing_example.py  test_ml_training_example.py  test_node.py  test_runner.py  test_rust_integration.py  test_scheduler.py  test_store.py  test_toposort.py  test_tube.py  test_types.py  test_validation.py  test_yaml.py
tests/data/: README.md
tests/data/mypy/: return_scalar.yaml
tests/data/pipelines/: README.md  asset_array.yaml  asset_class.yaml  asset_db.yaml  asset_depends.yaml  asset_func.yaml  asset_process.yaml  asset_runner.yaml  asset_server.yaml  async.yaml  basic.yaml  branch.yaml  complex_deep.yaml  complex_fanout.yaml  complex_parallel.yaml  cycle.yaml  depends.yaml  disable_node.yaml  disable_return.yaml  enable_flag.yaml  gather.yaml  gather_dependent.yaml  gather_n.yaml  input_mixed.yaml  input_tube_depends.yaml  input_tube_params.yaml  kitchen_sink.yaml  map.yaml  merge.yaml  mixed_slot.yaml  multi_signal.yaml
tests/data/pipelines/asset/: asset_node.yaml  asset_runner.yaml
tests/data/pipelines/basic/: kitchen_sink.yaml
tests/data/pipelines/cli/: cli_interactive.yaml
tests/data/special/: asset_depends_nocopy.yaml  asset_post_depends.yaml  error.yaml  stateless.yaml
tests/fixtures/: __init__.py  config.py  paths.py  runner.py  tubes.py
tests/node/: test_base.py  test_generator.py  test_node.py  test_wrap.py
tests/test_cli/: test_run.py
tests/test_mypy/: pyproject.toml  test_return.yml
tests/test_network/: test_message.py
tests/test_pipelines/: test_asset.py  test_async.py  test_basic.py  test_input.py  test_map.py  test_recursive.py
tests/test_runners/: test_async.py  test_runner.py  test_zmq.py
tests/test_scratch/data/: data.json  pipeline.yaml  server.yaml
tests/test_scratch/pkg/: __init__.py
(+6 files in other folders)
