[project]
name = "noob"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "raymondwjang", email = "ray0815@ucla.edu"},
    {name= "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"}
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
