[project]
dependencies = []
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
dev = [
    "copier>=9.12.0",
    "-e file:///${PROJECT_ROOT}/packages/noob[dev]",
    "-e file:///${PROJECT_ROOT}/packages/nobes[dev]",
]

[tool.pdm.resolution.overrides]
nobes-core = "file:///${PROJECT_ROOT}/packages/nobes-core"
nobes-input = "file:///${PROJECT_ROOT}/packages/nobes-input"
nobes-video = "file:///${PROJECT_ROOT}/packages/nobes-video"

[tool.pdm.scripts]
test-noob.cmd = "pytest --cov=noob --cov-append"
test-noob.working_dir = "packages/noob"
test.composite = [
    "test-noob",
]

lint.composite = [
    "ruff check",
    "black . --diff",
]
format.composite = [
    "black .",
    "ruff check --fix",
]

docs = """sphinx-autobuild docs docs/_build/html"""
docs-js = """concurrently
  'npm --prefix js/ run watch:docs'
  'sphinx-autobuild docs docs/_build/html'
"""
docs-build.cmd = "make html"
docs-build.working_dir = "docs"
docs-build-js = "npm --prefix js/ run build:docs"
docs-test.composite = [
    "rm -rf ./docs/_build || true",
    "docs-build-js",
    "docs-build",
]
docs-test.env = {SPHINXOPTS = "-W --keep-going"}
mypy = "mypy"
benchmark.cmd = "pytest tests/bench.py --codspeed --timeout=15"
benchmark.working_dir = "packages/noob"
new_nobes = "copier copy templates/nobes packages"

[tool.black]
target-version = ["py311", "py312", "py313"]
line-length = 100

[tool.ruff]
target-version = "py311"
include = ["packages/**/*.py", "tests/**/*.py", "docs/_ext/**/*.py", "**/pyproject.toml"]
exclude = ["docs", "templates"]
line-length = 100

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # annotations
    "ANN",
    # no debugger
    "T10",
    ## ----------
    # pydocstyle
    # indentation
    "D207", "D208",
    # whitespace
    "D210", "D211",
    # emptiness
    "D419",
    # snake case function name
    "N802",
    # FastAPI
    "FAST",
    # SQLi and Autoescaping in templates
    "S608", "S701",
]

ignore = [
    #"special" methods like `__init__` don't need to be annotated
    "ANN204",
    # any types are semantically valid actually sometimes
    "ANN401",
    # explicit strict arg for zip
    "B905",
    # docstrings for __init__
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/conftest.py" = [
    # allow unused imports - fixtures
    "F401",
    # allow star import of fixtures
    "F403",
]
"**/tests/**/test_*" = [
    # don't require annotating fixture types in test functions
    "ANN001", "ANN201",
    # allow unused variables, also normal in tests
    "F841",
]

[tool.ruff.lint.isort]
known-first-party = ["noob", "nobes"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/packages"
packages = ["noob", "nobes"]
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true
color_output = true
plugins = ['pydantic.mypy']
