[package]
name = "noob-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "noob_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rayon = "1.8"  # Parallel iterators for CPU-bound work
crossbeam = "0.8"  # Lock-free data structures
parking_lot = "0.12"  # Faster mutexes than std
dashmap = "5.5"  # Concurrent HashMap
smallvec = "1.11"  # Stack-allocated small vectors for performance
ahash = "0.8"  # Faster hashing algorithm
bytes = "1.5"  # Efficient byte buffer management
tokio = { version = "1.35", features = ["full"] }  # Async runtime
rusqlite = { version = "0.30", features = ["bundled"] }  # Embedded SQLite

# P2P Networking
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "kad", "identify", "ping", "mdns"] }
libp2p-swarm = "0.44"
multiaddr = "0.18"
multihash = "0.19"  # Content addressing
cid = "0.11"  # Content identifiers

# CRDTs for distributed state
automerge = "0.5"  # High-performance CRDT library
yrs = "0.18"  # Yjs CRDTs in Rust

# Content-addressed storage
blake3 = "1.5"  # Fast cryptographic hashing
lru = "0.12"  # LRU cache for content

# Distributed consensus (optional)
raft = "0.7"  # Raft consensus algorithm

[profile.release]
lto = true  # Link-time optimization for maximum performance
opt-level = 3  # Maximum optimization
codegen-units = 1  # Better optimization at cost of compilation time
strip = true  # Strip symbols for smaller binary
panic = "abort"  # Smaller binary, faster performance

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
